--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.*"
+        "illuminate/support": "~5.0@dev"
     },
     "autoload": {
         "classmap": [
             "src/migrations",
 			"src/controllers",
 			"src/Models"
-			
+
         ],
 		"files": [
 			"src/helper/FormatNumber.php"
@@ -28,7 +28,7 @@
     },
     "extra": {
 		"component": "package",
-		"frameworks": [ "Laravel 4"],
+		"frameworks": [ "Laravel 5"],
 		"versions": {
 			"1": "master"
 
